...
    <!--MainActivity-->
    <string name="app_name">Gestor de datos | I.E.S. El Rincón</string>
    <string name="loginTitle">Iniciar sesión:</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="signup">Sign up</string>
    <string name="login">Log in</string>
    <string name="rememberPass">Recordar contraseña</string>
    <string name="whiteBackground">Fondo blanco</string>
    <string name="originalBackground">Fondo original</string>

    <!--Errors-->

...
